--- a/index.html
+++ b/index.html
@@ -5,8 +5,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>MOVYO | CAR RENTAL</title>
     <link rel="stylesheet" href="index.css" />
+    <script src="https://unpkg.com/lucide@latest/dist/umd/lucide.min.js"></script>
   </head>
   <body>
-    <h1 class="text-3xl font-bold underline">Hello world!</h1>
+    <div id="header"></div>
+    <div id="footer"></div>
   </body>
+
+  <script type="module" src="main.js"></script>
 </html>
